# LDMEDIC_Project

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  inkbird_ble.c  inkbird_ble.h  jason_parser.h  json_parser.c  main.c  main.h  main_funcs.c  ota_modem.c
main/EG915/: EG915_modem.c  EG915_modem.h  credentials.h  errors_modem.h  modem_aux.c  modem_aux.h
main/INKBIRD/: inkbird_ble.c  inkbird_ble.h
main/OTA_BLE/: gap.c  gatt_svr.c
main/OTA_MODEM/: ota_control.c  ota_esp32.c
